--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -98,53 +98,57 @@ span{
 /*second panel*/
 
 .container3{
-	height: 20em;
+	height: 10em;
 	width: 100%;
 	background-color: #696969;
 }
-.container3 img{
-	width: 175px;
-	height: 175px;
-	margin: 200px 0px 0px 200px;
+.about{
 	position: relative;
-	left: 600px;
-}
-.container3 p{
-	display: inline-block;
-	position: relative;
-	left: 565px;
-	margin: 100px 25px 0px 250px;
-
-}
-
-#paragraphs{
-	position: relative;
+	height: auto;
+	width: 350px;
 	float: right;
-	width: 40%;
-	top: 10em;
-	padding: 3px;
-	margin: 3px;
+	margin: 100px 100px 100px 100px;
+	top: -50px;
+	right: 225px;
 
 }
-
-#paragraphs p{
-	font-size: 100%;
-	padding: 5px;
+.about h1{
+	text-align: center;
+	position: relative;
+	font-size: 32px;
+	font-weight: bold;
 }
-
-
-#bodyimages img{
-
-	height: 10%;
-	width: 10%;
-	margin: 20px;
-	padding: 30px;
-
+.about p{
+	font-size: 24px;
+	margin-top: 10px;
+}
+.container4{
+	background-color: rgb(50,51,55);
+	height: 30em;
+}
+.container4 img{
+	height: 30%;
+	width: 15%;
+	position: relative;
+	padding: 5%;
+	overflow-x: hidden;
+	left: 250px;
 }
 #bodyimages p{
+	display: inline;
+}
+#bodyimages{
+	position: relative;
+	top: -70px;
 }
 
+
+
+
 	/*footer styles*/
+footer{
+	background-color: rgb(50,51,55);
+}
 .footerleft{
 	padding: 3px;
 	margin: 10px;
@@ -156,10 +160,22 @@ span{
 	padding: 3px;
 	float: right;
 	margin: 10px;
+	color: black;
 
 }
-@media only screen and (min-width: 864px) {
-    #company h1{
-       font-size: 500%;
-    }
+@media only screen and (min-width: 500px) {
+    .about{
+	position: relative;
+	height: auto;
+	width: 350px;
+	float: right;
+	margin: 100px 100px 100px 100px;
+	top: -100px;
+	right: -40px;
+
+}
+#bodyimages{
+	position: relative;
+	top: -30px;
+}
 }
