--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,15 +32,25 @@ a{
 	text-decoration: none;
 	font-size: 1em;
 	font-family: calibri;
-	margin: 50px;
-	padding: 60px;
+	margin: 30px;
+	padding: 40px;
 	font-size: 300%;
+	position: relative;
+	top: 8px;
+}
+#navbar li:first-child{
+
+	margin: 0px;
+	padding: 10px;
+	float: left;
+	position: relative;
+	top: 0px;
 }
 #company h1{
 	text-align: center;
 	font-weight: bold;
 	color: #e6e6e6;
-	text-shadow: 1px 2px black;
+	text-shadow: 4px 2px black;
 	position: relative;
 	margin:auto;
     vertical-align:middle;
@@ -81,12 +91,13 @@ span{
 
 
 .container1 #backgroundImg{
-	height: 50em;
+	height: 53.5em;
 	width: 100%;
 	position: absolute;
 	z-index: 0;
 	filter: contrast(70%);
 	opacity: 1;
+	filter: blur(3px);
 
 }
 
@@ -98,9 +109,9 @@ span{
 /*second panel*/
 
 .container3{
-	height: 10em;
+	height: 20em;
 	width: 100%;
-	background-color: #696969;
+	background-color: rgb(50,51,55);
 }
 .about{
 	position: relative;
@@ -123,8 +134,8 @@ span{
 	margin-top: 10px;
 }
 .container4{
-	background-color: rgb(50,51,55);
-	height: 30em;
+	height: 40em;
+	background-color: #696969;
 }
 .container4 img{
 	height: 30%;
