--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,13 @@
-
+@keyframes example {
+    from {background-color: none;}
+    to {background-color: rgb(50,51,55);
+    	opacity: .5;}
+}
 
 	/*Header Styles*/
+.headerProps .icon {
+  display: none;
+}
 
 .headerProps{
 	background-color: rgb(50,51,55);
@@ -32,11 +39,10 @@ a{
 	text-decoration: none;
 	font-size: 1em;
 	font-family: calibri;
-	margin: 30px;
-	padding: 40px;
 	font-size: 300%;
 	position: relative;
 	top: 8px;
+	margin: 0px 10% 0px 10%;
 }
 #navbar li:first-child{
 
@@ -44,7 +50,13 @@ a{
 	padding: 10px;
 	float: left;
 	position: relative;
-	top: 0px;
+	top: -12px;
+	font-size: 4em;
+}
+#navbar li:nth-child(n+2):hover{
+	animation-name: example;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: forwards;
 }
 #company h1{
 	text-align: center;
@@ -138,8 +150,8 @@ span{
 	background-color: #696969;
 }
 .container4 img{
-	height: 30%;
-	width: 15%;
+	height: 200px;
+	width: 200px;
 	position: relative;
 	padding: 5%;
 	overflow-x: hidden;
@@ -174,7 +186,7 @@ footer{
 	color: black;
 
 }
-@media only screen and (min-width: 500px) {
+@media only screen and (max-width: 500px) {
     .about{
 	position: relative;
 	height: auto;
@@ -188,5 +200,9 @@ footer{
 #bodyimages{
 	position: relative;
 	top: -30px;
+}
+#navbar li{
+	margin: 0px 0% 0px 0%;
+	padding: 0px;
 }
 }
