--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -52,9 +52,9 @@ a{
 	top: -12px;
 	font-size: 4em;
 }
-	li:hover{
+li:hover{
 	animation-name: example;
-    animation-duration: 1s;
+    animation-duration: .1s;
     -webkit-animation-fill-mode: forwards;
 }
 #company h1{
