--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -66,6 +66,7 @@ li:hover{
 	margin:auto;
     vertical-align:middle;
     top: 3.2em;
+    font-size: 130px;
 }
 
 
@@ -192,6 +193,13 @@ footer{
 		font-size: 200%;
 
 }
+#company h1{
+    font-size: 72px;
+    top: 5em;
 
+}
+.about {
+	top: 5%;
+}
 
 }
