--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,18 @@
     	opacity: .5;}
 }
 
+@keyframes fadein{
+	from{opacity: 0;}
+	to{opacity: 1;}
+}
+.fadein{
+	animation-name: fadein;
+    animation-duration: 3s;
+    -webkit-animation-fill-mode: forwards;
+
+}
 	/*Header Styles*/
+}
 .headerProps .icon {
   display: none;
 }
@@ -125,14 +136,29 @@ span{
 	width: 100%;
 	background-color: rgb(50,51,55);
 }
+.container3 .abouth1{
+	margin: 100px;
+	float: right;
+	position: relative;
+	top: 50%;
+	right: 35%;
+}
+.container3 h1{
+	font-size: 50px;
+	font-family: Helvetica;
+	font-weight: bold;
+}
 .about{
 	position: relative;
-	width: 350px;
+	width: 80%;
 	float: right;
-	margin: 0 auto;
+	margin:auto;
 	text-align: center;
-	bottom: 30%%;
-	right: 40%;
+	top: 30%;
+	right: 10%;
+	font-family: Helvetica;
+	text-align: center;
+	text-overflow: hidden;
 
 }
 .about h1{
@@ -164,6 +190,8 @@ span{
 #bodyimages{
 	position: relative;
 	margin: auto;
+	top: 15%;
+	left: 5%
 }
 
 
@@ -200,6 +228,22 @@ footer{
 }
 .about {
 	top: 5%;
+	right: 10%;
+	margin: 0 auto;
+}
+.container3 .abouth1{
+	right: 20%;
 }
 
+.container4 img{
+	height: 170px;
+	width: 170px;
+}
+#bodyimages p{
+left: 8%;
+position: relative;
+}
+#bodyimages{
+	right: 10%
+}
 }
