--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,7 +12,7 @@
 }
 .fadein{
 	animation-name: fadein;
-    animation-duration: 3s;
+    animation-duration: 5s;
     -webkit-animation-fill-mode: forwards;
 
 }
@@ -149,6 +149,7 @@ span{
 	font-size: 50px;
 	font-family: Helvetica;
 	font-weight: bold;
+	color: #a13939;
 }
 .about{
 	position: relative;
