--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,6 @@
 
 
-@keyframes example {
+@keyframes hoveranimation {
     from {color: none;}
     to {color: rgb(50,51,55);
     	opacity: .5;}
@@ -66,7 +66,7 @@ a{
 	font-size: 4em;
 }
 li:hover{
-	animation-name: example;
+	animation-name: hoveranimation;
     animation-duration: .1s;
     -webkit-animation-fill-mode: forwards;
 }
@@ -134,7 +134,7 @@ span{
 /*second panel*/
 
 .container3{
-	height: 20em;
+	height: 30em;
 	width: 100%;
 	background-color: rgb(50,51,55);
 }
@@ -142,11 +142,11 @@ span{
 	margin: 100px;
 	float: right;
 	position: relative;
-	top: 50%;
-	right: 35%;
+	top: 60%;
+	right: 36%;
 }
 .container3 h1{
-	font-size: 50px;
+	font-size: 72px;
 	font-family: Helvetica;
 	font-weight: bold;
 	color: #a13939;
@@ -158,7 +158,7 @@ span{
 	margin:auto;
 	text-align: center;
 	top: 30%;
-	right: 10%;
+	right: 12.5%;
 	font-family: Helvetica;
 	text-align: center;
 	text-overflow: hidden;
@@ -167,7 +167,7 @@ span{
 
 .about p{
 	font-size: 24px;
-	margin-top: 10px;
+	margin-top: 0px;
 }
 .container4{
 	height: 40em;
@@ -264,13 +264,16 @@ padding: 0;
 	top: 20%;
 }
 .container3{
-	height: 40em;
+	height: 60em;
 }
 .container4{
-	height: 50em;
+	height: 60em;
 }
 .container3 .abouth1{
-	top: 70%;
-	right: 25%;
+	top: 40%;
+	right: 0%;
+}
+.container3 h1{
+	font-size: 150px;
 }
 }
