--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -181,15 +181,14 @@ span{
 	height: 40px;
 }
 .imageGroup{
-	height: 100px;
-
 }
 .imageGroupTwo{
 	position: relative;
-	top: -560px;
+	top: -520px;
 	right: -315px;
 	width: 300px;
 	height: auto;
+	margin:0;
 }
 
 #imageone{
@@ -219,7 +218,7 @@ span{
 	right: 20px;
 }
 
-#imagetwo p{
+.container4 p{
 	font-weight: bold;
 	font-family: Helvetica;
 	font-size: 18px;
