--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -164,16 +164,28 @@ span{
 	font-size: 32px;
 }
 .container4{
-	height: 30em;
+	height: 40em;
 	width: auto;
 	background-color: #696969;
-	display: grid;
-	grid-template-columns: 30% 20%;
-	padding: 100px;
+}
+.container4inside{
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center; /*centers items on the line (the x-axis by default)*/
+  align-items: center; /*centers items on the cross-axis (y by default)*/
+  bottom: 80px;
+}
+.container4inside div{
+	padding: 140px;
+	margin-top: 30px;
+	text-align: center;
 }
 .container4 img{
-	height: 100px;
-	width: 100px;
+	height: 125px;
+	width: 125px;
 
 }
 .container4 p{
@@ -254,14 +266,17 @@ a{
 }
 
 .container4{
-		grid-template-columns: 30% 30%;
+		text-align: center;
 		overflow: hidden;
 }
 .container4 img{
-	height: 170px;
-	width: 170px;
+	height: 90px;
+	width: 90px;
 	margin: 0;
 	padding: 0;
+}
+.container4inside div{
+	padding: 40px;
 }
 
 .container3{
