--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -145,6 +145,17 @@ span{
 	font-size: 72px;
 	margin: 0px auto auto auto;
 	padding: 0px 100px 50px 100px;
+	text-align: center;
+}
+.container3inside p{
+	position: relative;
+	display: flex;
+	font-size: 46px;
+	margin: 0px auto auto auto;
+	text-align: center;
+	padding: 0px 100px 50px 100px;
+	width: auto;
+
 }
 
 /*between 3 and 4 sorry future Tristan*/
@@ -153,7 +164,20 @@ span{
 	height: 50em;
 	width: 100%;
 	background-image: url(../img/abstract-art-background-370799.jpg);
+}
+.containerbefore4 h1{
+	text-align: center;
+	margin: 10px auto;
+	font-size: 100px;
+	width: 100%;
+	height: 100px;
+}
 
+.containerbefore4 img{
+	position: relative;
+	height: 350px;
+	width: 350px;
+	margin: auto;
 }
 
 
@@ -215,6 +239,11 @@ span{
   	padding-top: 5px;
   	font-weight: bold;
 }
+.stackedform h1{
+	position: absolute;
+	font-size: 56px;
+	top: 100px;
+}
 
 .contactInput{
 	position: relative;
@@ -222,6 +251,9 @@ span{
 	width: 50%;
 	text-align: center;
 	border-radius: 10%;
+	background-color: rgb(50,51,55);
+	border-color: rgb(50,51,55);
+
 
 
 }
@@ -234,12 +266,16 @@ span{
 	height: 160px;
 	resize: none;
 	border-radius: 8%;
+	background-color: rgb(50,51,55);
+	border-color: rgb(50,51,55);
+
 
 
 }
 .submitButton{
 	border-radius: 10%;
 	border-color: rgb(50,51,55);
+	background-color: rgb(50,51,55);
 	}
 
 .container4 img{
@@ -356,9 +392,21 @@ footer{
 			height: 90px;
 			width: 90px;
 		}
+
+		.container3inside i{
+		font-size: 36px;
+
+		}
+
+		.container3inside p{
+		font-size: 22px;
+
+		}
+
 		.container4inside div{
 			padding: 40px;
 		}
+
 
 		.container3{
 			margin-top: -4px;
