--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -248,7 +248,7 @@ span{
 
 .contactInput{
 	position: relative;
-	margin: 10px;
+	margin: 2px;
 	width: 50%;
 	text-align: center;
 	border-radius: 10%;
@@ -260,7 +260,7 @@ span{
 }
 .contactTextArea{
 	position: relative;
-	margin: 10px;
+	margin: 2px;
 	float: left;
 	width: 80%;
 	text-align: center;
@@ -277,6 +277,7 @@ span{
 	border-radius: 10%;
 	border-color: rgb(50,51,55);
 	background-color: rgb(50,51,55);
+	color: white;
 	}
 
 .container4 img{
