--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -159,6 +159,12 @@ span{
 	width: auto;
 
 }
+.container3inside h1{
+	text-align: center;
+	margin: 40px auto;
+	font-size: 100px;
+	width: 100%;
+}
 
 /*between 3 and 4 sorry future Tristan*/
 .containerbefore4{
@@ -175,6 +181,7 @@ span{
 }
 .iframe{
 	width: 50%;
+	margin: 30px;
 }
 .aboutproject{
 	font-size: 36px;
@@ -183,15 +190,11 @@ span{
 	height: 100%;
 
 }
-.aboutprject p{
-	margin: 50px;
+.aboutproject p:nth-child(1){
+	margin-top: 20px;
 }
-.containerbefore4 h1{
-	text-align: center;
-	margin: 40px auto;
-	font-size: 100px;
-	width: 100%;
-	height: 100px;
+.aboutproject p{
+	padding: 10px;
 }
 
 .containerbefore4 img{
@@ -392,8 +395,7 @@ margin: 5px;
 
 		.container4{
 				text-align: center;
-				overflow: hidden;
-				height: 35em;
+				height: 40em;
 		}
 		.container4 img{
 			height: 90px;
@@ -411,7 +413,6 @@ margin: 5px;
 		}
 
 		.container4inside div{
-			padding: 40px;
 		}
 
 
