--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,7 +16,7 @@ animation
 }
 .fadein{
 	animation-name: fadein;
-    animation-duration: 5s;
+    animation-duration: 2s;
     -webkit-animation-fill-mode: forwards;
 
 }
@@ -188,6 +188,7 @@ span{
 	margin: auto;
 	width: 40%;
 	height: 100%;
+	color: aliceblue;
 
 }
 .aboutproject p:nth-child(1){
@@ -202,7 +203,7 @@ span{
 	width: 60px;
 	padding: 10px;
 	border: solid 2px white;
-	color: black;
+	color: aliceblue;
 	margin: auto;
 
 }
@@ -281,6 +282,7 @@ span{
 	position: relative;
 	margin: 2px;
 	width: 100%;
+	height: 30px;
 
 
 
@@ -289,20 +291,28 @@ span{
 .contactTextArea{
 	position: relative;
 	margin: 2px;
-	width: 100%;
+	width: 99.5%;
 	text-align: center;
 	height: 160px;
 	resize: none;
 
-
-
-
+}
+.contactTextArea:focus , .contactInput:focus{
+	border:2px solid #9BAFFF;
 }
 .submitButton{
-	border-color: rgb(50,51,55);
-	background-color: rgb(50,51,55);
+	border:solid 1px rgb(50,51,55);
+	background-color: #3E4666;
 	color: white;
+	height: 44px;
+	width: 467px;
+	font-size: 22px;
+	font-weight: bold;
 	}
+.submitButton:hover{
+	background-color: #6B79B0;
+
+}
 
 .container4 img{
 	height: 125px;
@@ -346,6 +356,7 @@ span{
 	height: 35em;
 	margin-bottom: 0px;
 	display: flex;
+	opacity: .9;
 }
 .sourcesContainer{
 	height: 50%;
@@ -354,6 +365,7 @@ span{
 	position: relative;
 	overflow: none;
 	padding-left: 100px;
+	opacity: 1;
 }
 .sourcesContainer cite{
 	font-size: 56px;
