--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -305,7 +305,7 @@ span{
 	background-color: #3E4666;
 	color: white;
 	height: 44px;
-	width: 467px;
+	width: 101.5%;
 	font-size: 22px;
 	font-weight: bold;
 	}
